GNOME Bugzilla – Bug 685065
Missing cast in curlbasesink
Last modified: 2012-09-29 10:46:10 UTC
gstcurlbasesink.c: In function 'gst_curl_base_sink_setup_dscp_unlocked': gstcurlbasesink.c:1175:7: error: passing argument 4 of 'setsockopt' from incompatible pointer type [-Werror] f:\gstreamer-buildslave\mingw\bin\../lib/gcc/mingw32/4.6.2/../../../../include/winsock2.h:551:32: note: expected 'const char *' but argument is of type 'gint *'
Created attachment 225351 [details] [review] Fixes the warning.
commit 2c2d6b0753b6e19205d36db5783f39edba7ebf51 Author: Руслан Ижбулатов <lrn1986@gmail.com> Date: Fri Sep 28 22:30:39 2012 +0400 curl: fix compiler warning with setsockopt() on windows The optval argument is of type const char * on windows. https://bugzilla.gnome.org/show_bug.cgi?id=685065 Would be great if you could use the notation 'plugin-or-element: xyz' for the summary lines of your patches in future, thanks!