curl: fix compiler warning with setsockopt() on windows

The optval argument is of type const char * on windows.

https://bugzilla.gnome.org/show_bug.cgi?id=685065